# crawler

./: Cargo.toml  README.md  dist-workspace.toml  out.txt
.github/workflows/: release-plz.yml  release.yml
src/: go_spider.rs  interface.rs  lib.rs  log_creation.rs  main.rs
src/database/: creation.rs  doc_rank.rs  doc_repr.rs  doc_represent.rs  mod.rs  quering.rs
src/page_utils/: go_spider.rs  mod.rs  page_analyzer.rs  page_fetching.rs  page_parser.rs  url_data_proc.rs
tests/: unittest.rs
