[package]
name = "crawler"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ALAWIII/crawler"
[dependencies]
clap = { version = "4.5.42", features = ["cargo"] }
reqwest = { version = "0.12.22", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.47.1", features = ["full"] }
rayon = "1.10.0"
num_cpus = "1.17.0"
url = "2.5.4"
once_cell = "1.21.3"
regex = "1.11.1"
surrealdb = { version = "2.3.7", features = ["kv-rocksdb"] }
serde = { version = "1.0.219", features = ["derive"] }
dashmap = "6.1.0"
libm = "0.2.15"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
