[package]
name = "crawler"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ALAWIII/crawler"
[dependencies]
clap = { version = "4.5.53", features = ["cargo"] }
reqwest = { version = "0.13.1", features = ["blocking"] }
scraper = "0.24.0"
tokio = { version = "1.48.0", features = ["full"] }
rayon = "1.11.0"
num_cpus = "1.17.0"
url = "2.5.7"
once_cell = "1.21.3"
regex = "1.12.2"
surrealdb = { version = "2.4.0", features = ["kv-rocksdb"] }
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
libm = "0.2.15"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
