[package]
name = "crawler"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ALAWIII/crawler"
[dependencies]
clap = { version = "4.6.1", features = ["cargo"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
scraper = "0.24.0"
tokio = { version = "1.52.2", features = ["full"] }
rayon = "1.12.0"
num_cpus = "1.17.0"
url = "2.5.8"
once_cell = "1.21.4"
regex = "1.12.3"
surrealdb = { version = "3.0.5", features = ["kv-rocksdb"] }
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
libm = "0.2.16"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
